--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,5 @@
 <resources>
     <string name="app_name">WeatherWise</string>
 
-    <string name="weather">Weather</string>
-    <string name="settings">Settings</string>
-    <string name="temperature_scale">Temperature scale</string>
-    <string name="fahrenheit">Fahrenheit (°F)</string>
-    <string name="celsius">Celsius (°C)</string>
-    <string name="error">Error</string>
-    <string name="search">Search</string>
+    <string name="feels_like">Feels like</string>
 </resources>
